plang/testing/logs/false-incorrect/71/program71.p.p.out
Error at acW (WT1) (SgmGf) (alxvU (nFH (Aii) (M44xb) uFcL) joeN) (Ve) :- ((g xJBW gxL)).:4:63 error: 
acW (WT1) (SgmGf) (alxvU (nFH (Aii) (M44xb) uFcL) joeN) (Ve) :- ((g xJBW gxL)).
                                                              ^
Error at acW (WT1) (SgmGf) (alxvU (nFH (Aii) (M44xb) uFcL) joeN) (Ve) :- ((g xJBW gxL)).:4:76 error: 
acW (WT1) (SgmGf) (alxvU (nFH (Aii) (M44xb) uFcL) joeN) (Ve) :- ((g xJBW gxL)).
                                                                           ^
Error at ? ((y3tU z9B, wlwh7 (ezGM Tl) (nm) (wF (qH (fcUhv H (YlZ) L)) (p K0 (FX) Qlw8F (Ql))), (f (A5) (aF qc)))); ((qX4gc (XeOS)), (vOjA (S2) k3); dsLJ lYNEv NEvnM (l (xaS) M3C (dJi)) ktWbF; ngewL, (hbQB o9 uo (X))).:5:1 error: 
? ((y3tU z9B, wlwh7 (ezGM Tl) (nm) (wF (qH (fcUhv H (YlZ) L)) (p K0 (FX) Qlw8F (Ql))), (f (A5) (aF qc)))); ((qX4gc (XeOS)), (vOjA (S2) k3); dsLJ lYNEv NEvnM (l (xaS) M3C (dJi)) ktWbF; ngewL, (hbQB o9 uo (X))).
^